fixed spacing from sides

--- a/vote/web/static/css/style.css
+++ b/vote/web/static/css/style.css
@@ -25,4 +25,5 @@ input[type="radio"] {
 
 .btn-space {
     margin-right: 10px;
+    margin-left: 10px;
 }
